--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,34 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Ignorar carpetas de compilación y salida
+/bin/
+/target/
+out/
+
+# Ignorar configuraciones del IDE
+.classpath
+.project
+.settings/
+
+# Ignorar archivos compilados
+*.class
+
+# Ignorar archivos de respaldo y temporales
+*.log
+*.tmp
+*.swp
+*.swo
+
+# Maven
+.mvn/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+target/
+
+# Gradle
+.gradle/
+build/
+
